#544 fix z-index htmlSelectUiUxLists

--- a/scss/components/_groupwrapper.scss
+++ b/scss/components/_groupwrapper.scss
@@ -11,6 +11,7 @@ li.groupe {
     display: block;
     clear: both;
     /*overflow: hidden;*/
+    z-index: auto;
 
     /*first line*/
     &>li.groupe {
