--- a/scss/components/citeriagroup/startendclassgroup/_startendclassgroup.scss
+++ b/scss/components/citeriagroup/startendclassgroup/_startendclassgroup.scss
@@ -21,7 +21,7 @@
     position: relative;
     min-width: auto;
     display: flex;
-    z-index: 10;
+    z-index: auto;
 
     .EditComponents {
         position: absolute;
@@ -33,7 +33,7 @@
         padding: 0 0;
         width: auto;
         font-size: 14px;
-        z-index: 1000;
+        z-index: 200;
         .edit-trait {
             position: absolute;
             top: 50%;
